--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.5.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
